--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="vospominaniy.ico">
 		<base target="_blank">
 	</head>
-		<body style=" background: url(фон-спогади.jpg);">
+		<body style=" background: url(phon.jpg);">
 
 				<h1 style="position: relative;text-align: center;">
 					<em>Надеюсь тебе понравится Зайка)</em>
